本地化适配完成

--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -12,7 +12,7 @@
     "ms.title.alive.goal":"Collect shards, revive yourself",
     "ms.title.kit.protect":"⚕ Soul Guardian ⚕",
     "ms.title.protect.goal":"Stop souls, let them stay",
-    "ms.lobby.ver":"Alpha 1.2",
+    "ms.ver":"Alpha 1.2",
     "ms.lobby.settings":"Modify Settings",
     "ms.lobby.start":"Start Game",
     "ms.init":"The game has been reset!",
