--- a/data/lang/zh_cn.json
+++ b/data/lang/zh_cn.json
@@ -1,6 +1,8 @@
 {
     "ms.title":"午夜 🔯 灵魂",
-    "ms.ver":"Alpha 1.2",
+    "ms.ver":"Alpha 3.2",
+    "ms.weapon":"祛灵刃",
+    "ms.weapon.desc":"斩断一切不净之物",
     "ms.title.kit":"你的身份是",
     "ms.title.kit.anime.1":"灵",
     "ms.title.kit.anime.2":"灵",
@@ -10,24 +12,56 @@
     "ms.title.kit.anime.6":"灵魂守卫",
     "ms.title.kit.anime.7":"灵魂守卫者",
     "ms.title.kit.alive":"⚕ 灵魂 ⚕",
-    "ms.title.alive.goal":"收集碎片, 于月下复活自己",
     "ms.title.kit.protect":"⚕ 灵魂守卫者 ⚕",
+    "ms.title.spec.wait":"等待游戏开始",
+    "ms.title.alive.goal":"收集碎片, 于月下复活自己",
     "ms.title.protect.goal":"阻止灵魂, 让他们终困于此",
+    "ms.title.ready":"▣ 游戏即将开始 ▣",
+    "ms.title.start":"▣ 游戏开始 ▣",
+    "ms.title.portal":"⚜ 传送门已出现 ⚜",
+    "ms.title.end":"游戏结束",
+    "ms.end.a":"灵魂方 大获全胜",
+    "ms.end.b":"灵魂方 略胜一筹",
+    "ms.end.c":"平局 无人得胜",
+    "ms.end.d":"灵魂守护者 略胜一筹",
+    "ms.end.e":"灵魂守护者 大获全胜",
+    "ms.info.end.1":"------- 详细结果 -------",
+    "ms.info.end.2":"灵魂守卫者",
+    "ms.info.end.3":"复活灵魂",
+    "ms.info.end.4":"死亡灵魂",
+    "ms.info.end.5":"等待稍后回到大厅…",
+    "ms.info.end.6":"---------------------",
+    "ms.info.donate":"[在爱发电上赞助我们]",
     "ms.lobby.settings":"调整设置",
     "ms.lobby.start":"开始游戏",
     "ms.init":"游戏已被重置!",
     "ms.join.play":"参与游戏",
     "ms.join.spec":"旁观游戏",
-    "ms.bossbar.wait":"等待玩家中 | 需要 5 人以开始",
-    "ms.bossbar.start":"人数已达标 | 游戏将在 %s 秒后开始",
-    "ms.bossbar.lock":"游戏已锁定 | 请等待管理员解锁",
+    "ms.bossbar.0.wait":"等待玩家中 | 需要 5 人以开始",
+    "ms.bossbar.0.start":"人数已达标 | 游戏将在 %s 秒后开始",
+    "ms.bossbar.0.lock":"游戏已锁定 | 请等待管理员解锁",
+    "ms.bossbar.1.kit":"正在分配职业 » %s 秒后开始",
+    "ms.bossbar.1.skill":"正在分配技能与天赋 » %s 秒后开始",
+    "ms.bossbar.1.ready":"游戏初始化完成 » %s 秒后开始",
+    "ms.bossbar.2.wait":"即将 » %s « 开始",
+    "ms.bossbar.3.info":"💠 气流稳定 💠 | 碎片收集 » ",
+    "ms.bossbar.3.heed":"💠 气流异常 💠 | 碎片收集 » ",
+    "ms.bossbar.3.warn":"💠 气流紊乱 💠 | 碎片收集 » ",
+    "ms.bossbar.4.portal.1":"传送门 »",
+    "ms.bossbar.4.portal.2":"« 已开启",
     "ms.setting":"设置面板",
     "ms.setting.enter":"调整为 创造模式 以进行设置调整",
+    "ms.setting.map_change":"%s 切换地图至 %s",
     "ms.setting.gamelock":"[锁定游戏]",
     "ms.setting.gamelock.hover":"阻止游戏开始",
-    "ms.setting.gamelock.off":"关闭游戏锁定",
-    "ms.setting.gamelock.on":"开启游戏锁定",
+    "ms.setting.gamelock.off":"%s 关闭了游戏锁定",
+    "ms.setting.gamelock.on":"%s 开启了游戏锁定",
+    "ms.setting.map_random":"[随机地图]",
+    "ms.setting.map_random.off":"%s 关闭了随机地图",
+    "ms.setting.map_random.on":"%s 开启了随机地图",
+    "ms.setting.map_random.hover":"随机选择地图",
     "ms.setting.init":"[重置游戏]",
+    "ms.setting.init_confirm":"请谨慎操作! 点击这句话以继续重置",
     "ms.setting.leave":"[退出设置]",
     "ms.setting.goal":"需要收集 %s 碎片",
     "ms.setting.goal.min":" ⚠ 目标碎片量不能低于 12 个！",
@@ -41,34 +75,70 @@
     "ms.debug.mark.purple":"[标记传送]",
     "ms.debug.mark.gold":"[标记灵灯]",
     "ms.debug.mark.red":"[删除标记]",
+    "ms.debug.summon.blue":"灵魂碎片 点位已生成",
+    "ms.debug.summon.gold":"灵魂之灯 点位已生成",
+    "ms.debug.summon.purple":"传送门 点位已生成",
+    "ms.debug.summon.red":"邻近点位已经删除",
     "ms.debug.speed":" 进程 »",
     "ms.debug.start":"[强制开始]",
+    "ms.debug.force_start":"%s 强制开始了游戏",
     "ms.debug.default":"[恢复默认]",
+    "ms.info.init":"%s 重置了游戏",
+    "ms.info.enter":"游戏正在进行中, 等一会就可以啦!",
+    "ms.info.rank.1":"灵气初起 · I · 碎片被收集时邻近的碎片将产生共鸣",
+    "ms.info.rank.2":"灵气渐浓 · II · 灵魂附近的碎片将与之共鸣",
+    "ms.info.rank.3":"灵气全开 · III · 所有剩余碎片开始共鸣",
+    "ms.info.dead.1":" 迎来了最终死亡",
+    "ms.info.dead.2":" 沉湎于复活幻象",
+    "ms.info.dead.3":" 又一次与世长别",
+    "ms.info.lamp":" 陷入垂死状态, 一盏灵魂之灯已经点亮……",
+    "ms.info.heal":" 成功脱离垂死状态!",
+    "ms.info.open":"灵力集中于一人身上, 传送门即刻开启!",
+    "ms.info.finish":" 成功复活",
     "ms.debug.cd":"冷却速度",
     "ms.debug.cl":"收集速度",
+    "ms.debug.locked":"周围容器已锁定",
+    "ms.map.size":"地图大小",
+    "ms.map.complex":"复杂程度",
+    "ms.map.author":"作者鸣谢",
     "ms.map.1":"聚光圣殿",
     "ms.map.2":"镇灵塔楼",
     "ms.map.3":"山间湖谷",
-    "ms.skill.001":" [技能] 幻影迷踪 | ⏳ 90s  ▶ 7s",
-    "ms.skill.002":" [技能] 灵灯之筑 | ⏳ 120s  ▶ 20s",
-    "ms.skill.101":" [技能] 虔诚力场 | ⏳ 70s  ▶ 5s",
-    "ms.skill.102":" [技能] 灵力掌控 | ⏳ 70s  ▶ 30s",
-    "ms.skill.001desc":" 隐身且速度大幅提升, 但你受到的伤害同样大幅提升",
-    "ms.skill.002desc":" 持续发光且速度大幅降低, 结束后使一个灵魂解除垂死状态，若无陷入垂死状态的灵魂，则灵魂守护者持续发光且速度小幅降低",
-    "ms.skill.101desc":" 即刻高亮全部灵魂, 其中距离你最近的灵魂效果时长翻倍",
-    "ms.skill.102desc":" 技能期间每有一个碎片被收集, 你都会在技能后获取一小段高额伤害与移速加成",
-    "ms.talent.001":" [天赋] 全神贯注 | ⏳ -s  ▶ 3s",
-    "ms.talent.002":" [天赋] 赴汤蹈火 | ⏳ 60s  ▶ 1s",
-    "ms.talent.003":" [天赋] 同生共死 | ⏳ -s  ▶ -s",
-    "ms.talent.101":" [天赋] 抱火寝薪 | ⏳ -s  ▶ -s",
-    "ms.talent.102":" [天赋] 火冒三丈 | ⏳ 60s  ▶ 3s",
-    "ms.talent.103":" [天赋] 灵力掌控 | ⏳ -s  ▶ -s",
-    "ms.talent.001desc":" 收集到灵魂碎片后, 速度小幅度提升, 收集速度略微提升",
-    "ms.talent.002desc":" 近距离内有灵魂守卫者时, 获得中幅加速",
-    "ms.talent.003desc":" 有灵魂处于垂死状态时, 速度小幅度提升, 效果不叠加",
-    "ms.talent.101desc":" 灵魂玩家不再显示红色警戒条",
-    "ms.talent.102desc":" 每当灵魂解除垂死状态时, 即刻高亮并小幅降低全体灵魂速度",
-    "ms.talent.103desc":" 小幅度减少自身擦刀时间",
+    "ms.map.1.desc":"匿于峡间的小镇, 圣殿在此祝福各位",
+    "ms.map.2.desc":"镇压灵魂之所, 复生与焚尽, 皆在一念之间",
+    "ms.map.3.desc":"平静的湖面波澜不起, 本该热闹的村庄却也寂静",
+    "ms.skill":" [技能] ",
+    "ms.skill.active":"技能触发",
+    "ms.skill.001":"幻影迷踪",
+    "ms.skill.002":"灵灯之筑",
+    "ms.skill.003":"逆向追踪",
+    "ms.skill.101":"虔诚力场",
+    "ms.skill.102":"灵力掌控",
+    "ms.skill.103":"唤灵留迹",
+    "ms.skill.001desc":"隐身且速度大幅提升, 但你受到的伤害同样大幅提升",
+    "ms.skill.002desc":"持续发光且速度大幅降低, 结束后使一个灵魂解除垂死状态，若无陷入垂死状态的灵魂，则灵魂守护者持续发光且速度小幅降低",
+    "ms.skill.003desc":"即刻高亮灵魂守卫者, 灵魂守卫者距离你越近生效时间越长",
+    "ms.skill.101desc":"即刻高亮全部灵魂, 其中距离你最近的灵魂效果时长翻倍",
+    "ms.skill.102desc":"技能期间每有一个碎片被收集, 你都会在技能后获取一小段高额伤害与移速加成",
+    "ms.skill.103desc":"标记最近的灵魂, 在其移动时将会有轨迹出现",
+    "ms.talent":" [天赋] ",
+    "ms.talent.active":"天赋触发",
+    "ms.talent.001":"全神贯注",
+    "ms.talent.002":"赴汤蹈火",
+    "ms.talent.003":"同生共死",
+    "ms.talent.004":"魂魄汲取",
+    "ms.talent.101":"抱火寝薪",
+    "ms.talent.102":"火冒三丈",
+    "ms.talent.103":"祛灵十字",
+    "ms.talent.104":"隐于迷雾",
+    "ms.talent.001desc":"收集到灵魂碎片后, 速度小幅度提升, 收集速度略微提升",
+    "ms.talent.002desc":"近距离内有灵魂守卫者时, 获得中幅加速",
+    "ms.talent.003desc":"有灵魂处于垂死状态时, 速度小幅度提升, 效果不叠加",
+    "ms.talent.004desc":"收集到灵魂碎片时, 自身回复微量生命",
+    "ms.talent.101desc":"灵魂玩家不再显示红色警戒条",
+    "ms.talent.102desc":"每当灵魂解除垂死状态时, 即刻高亮并小幅降低全体灵魂速度",
+    "ms.talent.103desc":"小幅度减少自身擦刀时间",
+    "ms.talent.104desc":"使全体灵魂陷入一段时间黑暗, 在下次攻击到灵魂前持续高亮距你较远的灵魂, 在靠近灵魂前持续隐身, 攻击到灵魂时重新开始冷却",
     "ms.tutorial.bossbar":"通过最上方的气流判断可以注意到敌方的存在, 且灵魂对之更加敏感!",
     "ms.tutorial.enter.soul":"现在你可以观察地图, 并且远离发着红光的地方……",
     "ms.tutorial.enter.protect":"在正式开始之前, 不妨再看看技能描述?",
