--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -1,114 +1,105 @@
 {
     "ms.title":"Midnight 🔯 Soul",
     "ms.ver":"Alpha 3.2",
-    "ms.weapon":"Soul Exorcising Blade",
-    "ms.weapon.desc":"Cut off all impure things",
-    "ms.title.kit":"Your identity is",
-    "ms.title.kit.anime.1":"Spirit",
-    "ms.title.kit.anime.2":"Spirit",
-    "ms.title.kit.anime.3":"Soul",
+    "ms.weapon":"Soul Exorciser",
+    "ms.weapon.desc":"Purify all the souls",
+    "ms.title.kit":"Your role is",
+    "ms.title.kit.anime.1":"S",
+    "ms.title.kit.anime.2":"So",
+    "ms.title.kit.anime.3":"Sou",
     "ms.title.kit.anime.4":"Soul",
-    "ms.title.kit.anime.5":"Soul Guard",
-    "ms.title.kit.anime.6":"Soul Guardian",
-    "ms.title.kit.anime.7":"Soul Protector",
+    "ms.title.kit.anime.5":"Soul Gua",
+    "ms.title.kit.anime.6":"Soul Guardi",
+    "ms.title.kit.anime.7":"Soul Guardian",
     "ms.title.kit.alive":"⚕ Soul ⚕",
-<<<<<<< HEAD
-    "ms.title.kit.protect":"⚕ Soul Protector ⚕",
-    "ms.title.spec.wait":"Waiting for the game to start",
-    "ms.title.alive.goal":"Collect fragments, resurrect yourself under the moon",
-    "ms.title.protect.goal":"Stop the souls, let them be trapped here forever",
-    "ms.title.ready":"▣ The game is about to start ▣",
-    "ms.title.start":"▣ The game starts ▣",
-    "ms.title.portal":"⚜ The portal has appeared ⚜",
-    "ms.title.end":"Game Over",
-    "ms.end.a":"The Soul Side won a great victory",
-    "ms.end.b":"The Soul Side won slightly",
-    "ms.end.c":"Draw, no one wins",
-    "ms.end.d":"The Soul Protector won slightly",
-    "ms.end.e":"The Soul Protector won a great victory",
-    "ms.info.end.1":"------- Detailed Results -------",
-    "ms.info.end.2":"Soul Protector",
-    "ms.info.end.3":"Resurrected Soul",
-    "ms.info.end.4":"Dead Soul",
-    "ms.info.end.5":"Wait a moment to return to the lobby...",
-    "ms.info.end.6":"---------------------",
-    "ms.info.donate":"[Sponsor us on Aifadian]",
-    "ms.lobby.settings":"Adjust settings",
-    "ms.lobby.start":"Start the game",
-=======
-    "ms.title.alive.goal":"Collect shards, revive yourself",
     "ms.title.kit.protect":"⚕ Soul Guardian ⚕",
-    "ms.title.protect.goal":"Stop souls, let them stay",
-    "ms.ver":"Alpha 1.2",
+    "ms.title.spec.wait":"Waiting for Start",
+    "ms.title.alive.goal":"Collect shards, Revive yourself",
+    "ms.title.protect.goal":"Stop the souls, Let them stay",
+    "ms.title.ready":"▣ Starting Soon ▣",
+    "ms.title.start":"▣ Game Start ▣",
+    "ms.title.portal":"⚜ Portal Spawned ⚜",
+    "ms.title.end":"Game Over",
+    "ms.end.a":"The Souls gained Full Victory",
+    "ms.end.b":"The Souls performed Better",
+    "ms.end.c":"Draw, Nobody Wins",
+    "ms.end.d":"Soul Guardian performed Better",
+    "ms.end.e":"Soul Guardian gained Full Victory",
+    "ms.info.end.1":"------- Results -------",
+    "ms.info.end.2":"Soul Guardian",
+    "ms.info.end.3":"Revived Souls",
+    "ms.info.end.4":"Dead Souls",
+    "ms.info.end.5":"Back to Lobby Soon",
+    "ms.info.end.6":"---------------------",
+    "ms.info.donate":"[Sponsor us on Afadian]",
     "ms.lobby.settings":"Modify Settings",
-    "ms.lobby.start":"Start Game",
->>>>>>> 75ea515d44034930a51788fc9dd390caae8e1403
-    "ms.init":"The game has been reset!",
-    "ms.join.play":"Join the game",
-    "ms.join.spec":"Watch the game",
-    "ms.bossbar.0.wait":"Waiting for players | Need 5 people to start",
-    "ms.bossbar.0.start":"The number of people has reached the standard | The game will start in %s seconds",
-    "ms.bossbar.0.lock":"The game is locked | Please wait for the administrator to unlock",
+    "ms.lobby.start":"Prepare for Game",
+    "ms.init":"Game had been reset!",
+    "ms.join.play":"Join the Game",
+    "ms.join.spec":"Watch the Game",
+    "ms.bossbar.0.wait":"Waiting For Players | Needs 5 to Start",
+    "ms.bossbar.0.start":"Prepared Enough | Game will be start in %ss",
+    "ms.bossbar.0.lock":"Game Locked | Wait for Admin unlock",
     "ms.bossbar.1.kit":"Assigning roles » The game will start in %s seconds",
     "ms.bossbar.1.skill":"Assigning skills and talents » The game will start in %s seconds",
-    "ms.bossbar.1.ready":"Game initialization is complete » The game will start in %s seconds",
-    "ms.bossbar.2.wait":"About to » %s « start",
-    "ms.bossbar.3.info":"💠 The airflow is stable 💠 | Fragment collection » ",
-    "ms.bossbar.3.heed":"💠 The airflow is abnormal 💠 | Fragment collection » ",
-    "ms.bossbar.3.warn":"💠 The airflow is chaotic 💠 | Fragment collection » ",
+    "ms.bossbar.1.ready":"Initialization finished » The game will start in %s seconds",
+    "ms.bossbar.2.wait":"About » %s « Start",
+    "ms.bossbar.3.info":"💠 Breath Stable 💠 | Shards » ",
+    "ms.bossbar.3.heed":"💠 Breath Abnormal 💠 | Shards » ",
+    "ms.bossbar.3.warn":"💠 Breath Chaotic 💠 | Shards » ",
     "ms.bossbar.4.portal.1":"Portal »",
     "ms.bossbar.4.portal.2":"« Opened",
-    "ms.setting":"Settings panel",
-    "ms.setting.enter":"Switch to Creative mode to adjust settings",
-    "ms.setting.map_change":"%s Switch the map to %s",
-    "ms.setting.gamelock":"[Lock Game]",
-    "ms.setting.gamelock.hover":"Prevent the game from starting",
-    "ms.setting.gamelock.off":"%s turned off the game lock",
-    "ms.setting.gamelock.on":"%s turned on the game lock",
+    "ms.setting":"Settings",
+    "ms.setting.enter":"Switch to Creative Mode for modify the game",
+    "ms.setting.map_change":"%s switches the map to %s",
+    "ms.setting.gamelock":"[Game Lock]",
+    "ms.setting.gamelock.hover":"Stop the game form Starting",
+    "ms.setting.gamelock.off":"%s unlocked the Game",
+    "ms.setting.gamelock.on":"%s locked the Game",
     "ms.setting.map_random":"[Random Map]",
-    "ms.setting.map_random.off":"%s turned off the random map",
-    "ms.setting.map_random.on":"%s turned on the random map",
-    "ms.setting.map_random.hover":"Randomly select a map",
+    "ms.setting.map_random.off":"%s disabled Random Map",
+    "ms.setting.map_random.on":"%s abled Random Map",
+    "ms.setting.map_random.hover":"Choose Map Randomly",
     "ms.setting.init":"[Reset Game]",
-    "ms.setting.init_confirm":"Please operate carefully! Click this sentence to continue resetting",
+    "ms.setting.init_confirm":"Please operate carefully! Click here to continue resetting",
     "ms.setting.leave":"[Exit Settings]",
     "ms.debug.panel":"Advanced Settings Panel",
     "ms.debug.map":" Map »",
-    "ms.debug.map.tp":"[Teleport to the current map]",
+    "ms.debug.map.tp":"[Teleport to the Map]",
     "ms.debug.mark":" Mark »",
-    "ms.debug.mark.blue":"[Mark Fragment]",
-    "ms.debug.mark.purple":"[Mark Transfer]",
-    "ms.debug.mark.gold":"[Mark Soul Lamp]",
+    "ms.debug.mark.blue":"[Mark Shard]",
+    "ms.debug.mark.purple":"[Mark Portal]",
+    "ms.debug.mark.gold":"[Mark Lamp]",
     "ms.debug.mark.red":"[Delete Mark]",
-    "ms.debug.summon.blue":"Soul Fragment position has been generated",
-    "ms.debug.summon.gold":"Soul Lamp position has been generated",
-    "ms.debug.summon.purple":"Portal position has been generated",
-    "ms.debug.summon.red":"Nearby positions have been deleted",
+    "ms.debug.summon.blue":"Shard Pos. Summoned",
+    "ms.debug.summon.gold":"Lamp Pos. Summoned",
+    "ms.debug.summon.purple":"Lamp Pos. Summoned",
+    "ms.debug.summon.red":"Surrounding Pos. is deleted",
     "ms.debug.speed":" Process »",
     "ms.debug.start":"[Force Start]",
-    "ms.debug.force_start":"%s forced the game to start",
+    "ms.debug.force_start":"%s Force Started the Game",
     "ms.debug.default":"[Restore Default]",
-    "ms.info.init":"%s reset the game",
-    "ms.info.enter":"The game is in progress, you can wait a moment!",
-    "ms.info.rank.1":"Aura Starts · I · Fragments will resonate when collected",
-    "ms.info.rank.2":"Aura Thicker · II · Fragments near the soul will resonate with it",
-    "ms.info.rank.3":"Aura Full · III · All remaining fragments begin to resonate",
-    "ms.info.dead.1":" Welcomed the final death",
-    "ms.info.dead.2":" Indulged in the illusion of resurrection",
-    "ms.info.dead.3":" Said goodbye to the world again",
-    "ms.info.lamp":" Fell into a dying state, a Soul Lamp has been lit...",
-    "ms.info.heal":" Successfully escaped from dying state!",
-    "ms.info.open":"The soul is concentrated on one person, the portal opens immediately! Be careful not to get caught!",
-    "ms.info.finish":" Successfully resurrected",
+    "ms.info.init":"%s resets the Game",
+    "ms.info.enter":"Game ongoing. Wait for a Moment!",
+    "ms.info.rank.1":"Aura Starts · I · Surroned shards will resonate when collecting",
+    "ms.info.rank.2":"Aura Thicker · II · Shards near the soul will resonate",
+    "ms.info.rank.3":"Aura Full · III · All remaining shards begin to resonate",
+    "ms.info.dead.1":" faced the final Death",
+    "ms.info.dead.2":" found revive a illusion",
+    "ms.info.dead.3":" said goodbye to the world again",
+    "ms.info.lamp":" fell in dying. A lamp have been lit",
+    "ms.info.heal":" successfully escaped from dying!",
+    "ms.info.open":"Aura all on one, portal have appeared!",
+    "ms.info.finish":" Revived",
     "ms.debug.cd":"Cooldown Speed",
-    "ms.debug.cl":"Collection Speed",
+    "ms.debug.cl":"Collects Speed",
     "ms.debug.locked":"Surrounding containers are locked",
     "ms.map.size":"Map Size",
     "ms.map.complex":"Complexity",
-    "ms.map.author":"Thanks to the author",
-    "ms.map.1":"Focus Sanctuary",
-    "ms.map.2":"Soul Suppressing Tower",
-    "ms.map.3":"Mountain Lake Valley",
+    "ms.map.author":"Builders",
+    "ms.map.1":"Spotlight Palace",
+    "ms.map.2":"Soul repress Tower",
+    "ms.map.3":"Lake & Canyon",
     "ms.map.1.desc":"A small town hidden between the canyons, the sanctuary blesses everyone here",
     "ms.map.2.desc":"The place to suppress souls, resurrection and burning, are all in one thought",
     "ms.map.3.desc":"The calm lake is calm, but the supposed lively village is also silent",
@@ -145,16 +136,18 @@
     "ms.talent.103desc":"Slightly reduces self-knife stroke time",
     "ms.talent.104desc":"Causes all souls to fall into darkness for a period of time, continuously highlights souls far from you before the next attack on the soul, remains invisible before approaching the soul, restarts cooldown when attacking the soul",
     "ms.tutorial.bossbar":"You can notice the presence of the enemy through the airflow at the top, and souls are more sensitive to it!",
-    "ms.tutorial.enter.soul":"Now you can observe the map and stay away from places that glow red...",
+    "ms.tutorial.enter.soul":"Now you can observe the map and stay away from places that glow red…",
     "ms.tutorial.enter.protect":"Before the official start, why not take another look at the skill descriptions?",
     "ms.tutorial.enter.spec":"Press the number keys to switch to other players!",
-    "ms.tutorial.start.soul":"Find the soul fragments scattered on the ground, squat down to collect them...be careful not to get caught!",
+    "ms.tutorial.start.soul":"Find the soul fragments scattered on the ground, squat down to collect them…be careful not to get caught!",
     "ms.tutorial.start.protect":"You run a little faster than the soul, use this advantage to wipe them out!",
-    "ms.tutorial.hurt":"You've been hit! I advise you to run before the guard recovers...",
-    "ms.tutorial.hit":"Generally, another hit can put them into a dying state, but you need to take a breather...",
+    "ms.tutorial.hurt":"You've been hit! I advise you to run before the guard recovers…",
+    "ms.tutorial.hit":"Generally, another hit can put them into a dying state, but you need to take a breather…",
     "ms.tutorial.lamp.soul":"A soul lamp will be generated when a teammate is dying! Light it up to help your teammate within a minute!",
-    "ms.tutorial.lamp.dying":"As long as your teammates light up the soul lamp within a minute, you can recover...I hope you can hold on",
+    "ms.tutorial.lamp.dying":"As long as your teammates light up the soul lamp within a minute, you can recover…I hope you can hold on",
     "ms.tutorial.lamp.protect":"A dying soul will recover and become invincible temporarily after the soul lamp is lit! Hurry up and prevent the soul lamp from being lit!",
-    "ms.tutorial.portal.soul":"The breath is no longer detectable...find the portal, resurrect yourself, be careful not to get caught!",
+    "ms.tutorial.portal.soul":"The breath is no longer detectable…find the portal, resurrect yourself, be careful not to get caught!",
     "ms.tutorial.portal.protect":"When the portal is opened, the soul will be very weak, now take advantage of this and kill them directly!",
+    "ms.tutorial.rank":"With the collect of the shards, the shards may glow",
+    "ms.tutorial.talent":"Talent will be triggered when they can, so you needn't to know the cooldown……?"
 }
