做事情不要只看一个方面
查完没有Fragment记得查fragment

--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -31,7 +31,7 @@
     "ms.info.end.4":"Dead Souls",
     "ms.info.end.5":"Back to Lobby Soon",
     "ms.info.end.6":"---------------------",
-    "ms.info.donate":"[Sponsor us on Afadian]",
+    "ms.info.donate":"[Sponsor us on AFDIAN]",
     "ms.lobby.settings":"Modify Settings",
     "ms.lobby.start":"Prepare for Game",
     "ms.init":"Game had been reset!",
@@ -115,7 +115,7 @@
     "ms.skill.002desc":"Continuously glowing and greatly slowing down, after ending, it will make a soul out of dying state, if there is no soul in dying state, then the soul protector will continue to glow and slightly slow down",
     "ms.skill.003desc":"Immediately highlight the soul protector, the closer the soul protector is to you, the longer the effect lasts",
     "ms.skill.101desc":"Immediately highlight all souls, the closest soul to you doubles the effect duration",
-    "ms.skill.102desc":"For every fragment collected during the skill, you will get a short period of high damage and speed bonus after the skill",
+    "ms.skill.102desc":"For every shard collected during the skill, you will get a short period of high damage and speed bonus after the skill",
     "ms.skill.103desc":"Mark the nearest soul, trails will appear when it moves",
     "ms.talent":" [Talent] ",
     "ms.talent.active":"Talent Triggered",
@@ -127,10 +127,10 @@
     "ms.talent.102":"Furious",
     "ms.talent.103":"Exorcising Cross",
     "ms.talent.104":"Hide in the Fog",
-    "ms.talent.001desc":"After collecting a soul fragment, speed slightly increases, collection speed slightly increases",
+    "ms.talent.001desc":"After collecting a soul shard, speed slightly increases, collection speed slightly increases",
     "ms.talent.002desc":"When a soul guard is nearby, gain moderate acceleration",
     "ms.talent.003desc":"When a soul is in a dying state, speed slightly increases, effect does not stack",
-    "ms.talent.004desc":"When collecting a soul fragment, self-recovers a small amount of health",
+    "ms.talent.004desc":"When collecting a soul shard, self-recovers a small amount of health",
     "ms.talent.101desc":"Soul players no longer display a red warning bar",
     "ms.talent.102desc":"Whenever a soul is relieved from a dying state, it immediately highlights and slightly reduces the speed of all souls",
     "ms.talent.103desc":"Slightly reduces self-knife stroke time",
@@ -139,7 +139,7 @@
     "ms.tutorial.enter.soul":"Now you can observe the map and stay away from places that glow red…",
     "ms.tutorial.enter.protect":"Before the official start, why not take another look at the skill descriptions?",
     "ms.tutorial.enter.spec":"Press the number keys to switch to other players!",
-    "ms.tutorial.start.soul":"Find the soul fragments scattered on the ground, squat down to collect them…be careful not to get caught!",
+    "ms.tutorial.start.soul":"Find the soul shards scattered on the ground, squat down to collect them…be careful not to get caught!",
     "ms.tutorial.start.protect":"You run a little faster than the soul, use this advantage to wipe them out!",
     "ms.tutorial.hurt":"You've been hit! I advise you to run before the guard recovers…",
     "ms.tutorial.hit":"Generally, another hit can put them into a dying state, but you need to take a breather…",
