--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -111,12 +111,12 @@
     "ms.skill.101":"Devotion Force Field",
     "ms.skill.102":"Spirit Control",
     "ms.skill.103":"Soul Trace",
-    "ms.skill.001desc":"Invisible and greatly increased speed, but the damage you receive also greatly increases",
-    "ms.skill.002desc":"Continuously glowing and greatly slowing down, after ending, it will make a soul out of dying state, if there is no soul in dying state, then the soul protector will continue to glow and slightly slow down",
-    "ms.skill.003desc":"Immediately highlight the soul protector, the closer the soul protector is to you, the longer the effect lasts",
-    "ms.skill.101desc":"Immediately highlight all souls, the closest soul to you doubles the effect duration",
-    "ms.skill.102desc":"For every shard collected during the skill, you will get a short period of high damage and speed bonus after the skill",
-    "ms.skill.103desc":"Mark the nearest soul, trails will appear when it moves",
+    "ms.skill.001.desc":"Invisible and greatly increased speed, but the damage you receive also greatly increases",
+    "ms.skill.002.desc":"Continuously glowing and greatly slowing down, after ending, it will make a soul out of dying state, if there is no soul in dying state, then the soul protector will continue to glow and slightly slow down",
+    "ms.skill.003.desc":"Immediately highlight the soul protector, the closer the soul protector is to you, the longer the effect lasts",
+    "ms.skill.101.desc":"Immediately highlight all souls, the closest soul to you doubles the effect duration",
+    "ms.skill.102.desc":"For every shard collected during the skill, you will get a short period of high damage and speed bonus after the skill",
+    "ms.skill.103.desc":"Mark the nearest soul, trails will appear when it moves",
     "ms.talent":" [Talent] ",
     "ms.talent.active":"Talent Triggered",
     "ms.talent.001":"Full Concentration",
@@ -127,14 +127,14 @@
     "ms.talent.102":"Furious",
     "ms.talent.103":"Exorcising Cross",
     "ms.talent.104":"Hide in the Fog",
-    "ms.talent.001desc":"After collecting a soul shard, speed slightly increases, collection speed slightly increases",
-    "ms.talent.002desc":"When a soul guard is nearby, gain moderate acceleration",
-    "ms.talent.003desc":"When a soul is in a dying state, speed slightly increases, effect does not stack",
-    "ms.talent.004desc":"When collecting a soul shard, self-recovers a small amount of health",
-    "ms.talent.101desc":"Soul players no longer display a red warning bar",
-    "ms.talent.102desc":"Whenever a soul is relieved from a dying state, it immediately highlights and slightly reduces the speed of all souls",
-    "ms.talent.103desc":"Slightly reduces self-knife stroke time",
-    "ms.talent.104desc":"Causes all souls to fall into darkness for a period of time, continuously highlights souls far from you before the next attack on the soul, remains invisible before approaching the soul, restarts cooldown when attacking the soul",
+    "ms.talent.001.desc":"After collecting a soul shard, speed slightly increases, collection speed slightly increases",
+    "ms.talent.002.desc":"When a soul guard is nearby, gain moderate acceleration",
+    "ms.talent.003.desc":"When a soul is in a dying state, speed slightly increases, effect does not stack",
+    "ms.talent.004.desc":"When collecting a soul shard, self-recovers a small amount of health",
+    "ms.talent.101.desc":"Soul players no longer display a red warning bar",
+    "ms.talent.102.desc":"Whenever a soul is relieved from a dying state, it immediately highlights and slightly reduces the speed of all souls",
+    "ms.talent.103.desc":"Slightly reduces self-knife stroke time",
+    "ms.talent.104.desc":"Causes all souls to fall into darkness for a period of time, continuously highlights souls far from you before the next attack on the soul, remains invisible before approaching the soul, restarts cooldown when attacking the soul",
     "ms.tutorial.bossbar":"You can notice the presence of the enemy through the airflow at the top, and souls are more sensitive to it!",
     "ms.tutorial.enter.soul":"Now you can observe the map and stay away from places that glow red…",
     "ms.tutorial.enter.protect":"Before the official start, why not take another look at the skill descriptions?",
