--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -113,7 +113,7 @@
     "ms.skill.103":"Soul Trace",
     "ms.skill.001.desc":"Invisible and greatly increased speed, but the damage you receive also greatly increases",
     "ms.skill.002.desc":"Continuously glowing and greatly slowing down, after ending, it will make a soul out of dying state, if there is no soul in dying state, then the soul protector will continue to glow and slightly slow down",
-    "ms.skill.003.desc":"Immediately highlight the soul protector, the closer the soul protector is to you, the longer the effect lasts",
+    "ms.skill.003.desc":"Immediately highlight the soul protector, the closer the soul guardian is to you, the longer the effect lasts",
     "ms.skill.101.desc":"Immediately highlight all souls, the closest soul to you doubles the effect duration",
     "ms.skill.102.desc":"For every shard collected during the skill, you will get a short period of high damage and speed bonus after the skill",
     "ms.skill.103.desc":"Mark the nearest soul, trails will appear when it moves",
