部分功能优化
Midnight Soul - α 3.2.1
#4 该版本实装
#5 该版本实装

--- a/data/lang/en_us.json
+++ b/data/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "ms.title":"Midnight 🔯 Soul",
-    "ms.ver":"Alpha 3.2",
+    "ms.ver":"Alpha 3.3",
     "ms.weapon":"Soul Exorciser",
     "ms.weapon.desc":"Purify all the souls",
     "ms.title.kit":"Your role is",
@@ -32,6 +32,8 @@
     "ms.info.end.5":"Back to Lobby Soon",
     "ms.info.end.6":"---------------------",
     "ms.info.donate":"[Sponsor us on AFDIAN]",
+    "ms.info.mpver":"Current Map Version",
+    "ms.info.rpver":"Current Translate Version",
     "ms.lobby.settings":"Modify Settings",
     "ms.lobby.start":"Prepare for Game",
     "ms.init":"Game had been reset!",
@@ -87,13 +89,15 @@
     "ms.info.dead.1":" faced the final Death",
     "ms.info.dead.2":" found revive a illusion",
     "ms.info.dead.3":" said goodbye to the world again",
-    "ms.info.lamp":" fell in dying. A lamp have been lit",
+    "ms.info.lamp":" fell in dying. A lamp have appeared",
     "ms.info.heal":" successfully escaped from dying!",
     "ms.info.open":"Aura all on one, portal have appeared!",
     "ms.info.finish":" Revived",
     "ms.debug.cd":"Cooldown Speed",
     "ms.debug.cl":"Collects Speed",
     "ms.debug.locked":"Surrounding containers are locked",
+    "ms.hint.shard":"Hold [%s] to collect",
+    "ms.hint.light":"Hold [%s] to lit",
     "ms.map.size":"Map Size",
     "ms.map.complex":"Complexity",
     "ms.map.author":"Builders",
