--- a/data/lang/zh_cn.json
+++ b/data/lang/zh_cn.json
@@ -32,6 +32,8 @@
     "ms.info.end.5":"等待稍后回到大厅…",
     "ms.info.end.6":"---------------------",
     "ms.info.donate":"[在爱发电上赞助我们]",
+    "ms.info.mpver":"当前地图版本",
+    "ms.info.rpver":"当前语言包版本",
     "ms.lobby.settings":"调整设置",
     "ms.lobby.start":"开始游戏",
     "ms.init":"游戏已被重置!",
@@ -87,13 +89,15 @@
     "ms.info.dead.1":" 迎来了最终死亡",
     "ms.info.dead.2":" 沉湎于复活幻象",
     "ms.info.dead.3":" 又一次与世长别",
-    "ms.info.lamp":" 陷入垂死状态, 一盏灵魂之灯已经点亮……",
+    "ms.info.lamp":" 陷入垂死状态, 一盏灵魂之灯已经出现……",
     "ms.info.heal":" 成功脱离垂死状态!",
     "ms.info.open":"灵力集中于一人身上, 传送门即刻开启!",
     "ms.info.finish":" 成功复活",
     "ms.debug.cd":"冷却速度",
     "ms.debug.cl":"收集速度",
     "ms.debug.locked":"周围容器已锁定",
+    "ms.hint.shard":"长按 [%s] 以收集",
+    "ms.hint.light":"长按 [%s] 以点亮",
     "ms.map.size":"地图大小",
     "ms.map.complex":"复杂程度",
     "ms.map.author":"作者鸣谢",
