Update zh_meme.json 21.1%

--- a/data/lang/zh_meme.json
+++ b/data/lang/zh_meme.json
@@ -1,40 +1,40 @@
 {
-    "ms.info.init": "%s 重置了游戏",
-    "ms.info.enter": "游戏正在进行中, 等一会就可以啦!",
-    "ms.bossbar.0.wait": "等待玩家中 | 需要 5 人以开始",
-    "ms.bossbar.0.start": "人数已达标 | 游戏将在 %s 秒后开始",
-    "ms.bossbar.0.lock": "游戏已锁定 | 请等待管理员解锁",
-    "ms.setting.enter": "调整为 创造模式 以进行设置调整",
-    "ms.mode.1.desc": "双方随机天赋、技能。",
-    "ms.mode.2.desc": "双方分别选择禁用对方天赋、技能，之后自选天赋、技能。",
-    "ms.title": "午夜 🔯 灵魂",
-    "ms.setting": "游戏设置",
-    "ms.lobby.settings": "调整设置",
-    "ms.setting.gamelock": "[锁定游戏]",
-    "ms.setting.gamelock.hover": "阻止游戏开始",
-    "ms.setting.map_random": "[随机地图]",
+    "ms.info.init": "%s 估计是把什么地方搞炸了，于是重置了游戏",
+    "ms.info.enter": "游戏正在进行中, 等亿会就可以啦!",
+    "ms.bossbar.0.wait": "等待俏佳人中 | 需要至少 圆周率第4位小数 位俏佳人以开始",
+    "ms.bossbar.0.start": "Welcome | Link Start!! - %s",
+    "ms.bossbar.0.lock": "游戏已镐蜂 | 请等待管理员整个好活",
+    "ms.setting.enter": "更改为 创意模式 以镐蜂地图",
+    "ms.mode.1.desc": "双方使用运气决定天赋、技能。",
+    "ms.mode.2.desc": "双方使用民主选举禁用对方天赋、技能，之后选择天赋、技能。",
+    "ms.title": "米德奈特 🔯 搜罗",
+    "ms.setting": "给目涉停",
+    "ms.lobby.settings": "魔帝five涉停",
+    "ms.setting.gamelock": "[关掉]",
+    "ms.setting.gamelock.hover": "阻止游戏打开",
+    "ms.setting.map_random": "[瑞东摸迈普]",
     "ms.setting.map_random.hover": "随机选择地图",
-    "ms.map.1": "聚光圣殿",
-    "ms.map.2": "镇灵塔楼",
-    "ms.map.3": "山间湖谷",
-    "ms.setting.init": "[重置游戏]",
-    "ms.setting.leave": "[退出设置]",
-    "ms.map.1.desc": "匿于峡间的小镇, 圣殿在此祝福各位",
-    "ms.map.2.desc": "镇压灵魂之所, 复生与焚尽, 皆在一念之间",
-    "ms.map.3.desc": "平静的湖面波澜不起, 本该热闹的村庄却也寂静",
-    "ms.map.size": "地图大小",
-    "ms.map.complex": "复杂程度",
-    "ms.map.author": "作者鸣谢",
-    "ms.setting.mode_change": "%s 切换模式至 %s",
-    "ms.mode.1": "普通模式",
-    "ms.mode.2": "排位模式",
-    "ms.setting.init_confirm": "请谨慎操作! 点击这句话以继续重置",
-    "ms.setting.map_change": "%s 切换地图至 %s",
-    "ms.setting.gamelock.off": "%s 开启了游戏锁定",
-    "ms.setting.gamelock.on": "%s 关闭了游戏锁定",
-    "ms.setting.map_random.off": "%s 关闭了随机地图",
-    "ms.setting.map_random.on": "%s 开启了随机地图",
-    "ms.title.kit": "你的身份是",
+    "ms.map.1": "一张正常的图",
+    "ms.map.2": "一张很小的图",
+    "ms.map.3": "一张很大的图",
+    "ms.setting.init": "[镐蜂游戏]",
+    "ms.setting.leave": "[丽芙涉停]",
+    "ms.map.1.desc": "不大不小好极了",
+    "ms.map.2.desc": "Deep Dark Fantasy",
+    "ms.map.3.desc": "找人模拟器",
+    "ms.map.size": "地图SAI自",
+    "ms.map.complex": "绕圈圈程度",
+    "ms.map.author": "伟大的建筑鸣谢",
+    "ms.setting.mode_change": "%s 切换莫德至 %s",
+    "ms.mode.1": "no摸莫德",
+    "ms.mode.2": "软壳莫德",
+    "ms.setting.init_confirm": "请谨慎操作! 点击这句话以继续镐蜂",
+    "ms.setting.map_change": "%s 切换迈普至 %s",
+    "ms.setting.gamelock.off": "%s 打开了关掉",
+    "ms.setting.gamelock.on": "%s 关掉了关掉",
+    "ms.setting.map_random.off": "%s 关掉了瑞东摸迈普",
+    "ms.setting.map_random.on": "%s 打开了瑞东摸迈普",
+    "ms.title.kit": "你是一个一个",
     "ms.title.kit.anime.1": "灵",
     "ms.title.kit.anime.2": "灵",
     "ms.title.kit.anime.3": "灵魂",
